# dt133g-thesis-project

./: .gitignore  .gitmodules  README.md  createdup.py  identifier-frequency-map.config.yaml  pyproject.toml  transtructiver.config.yaml
.github/workflows/: pytest.yml
configs/fine_tune/: codebert-base.json  codet5p-770m.json  deepseek-coder.json  graph-codebert.json  unixcoder-base.json
notebooks/: run_finetune.ipynb  valid_samples_metrics.ipynb
notebooks/.ipynb_checkpoints/: valid_samples_metrics-checkpoint.ipynb
output/: _00_dataset_normalization_report.txt  _00_extracted_datasets_report.txt  _01_normalized_datasets_report.txt  _02_exact_deduplication_report.txt  _03_near_deduplication_report.txt  _04_extracted_stats_report.txt  _05_filtered_datasets_report.txt  _06_generated_split_reports.txt  dataset_1_stats_report.txt  dataset_2_stats_report.txt  dataset_normalization_report.txt  hairosetta_stats_report.txt  identifier-frequency-map.json  manifest.jsonl
src/detectors/: base_detector.py  code_t5_detector.py  codebert_detector.py  graphcodebert_detector.py  unixcoder_detector.py
src/evaluation/: evaluate_transformations.py
src/evaluation/CodeBLEU/: bleu.py  calc_code_bleu.py  dataflow_match.py  syntax_match.py  utils.py  weighted_ngram_match.py
src/evaluation/CodeBLEU/parser/: DFG.py  __init__.py  utils.py
src/evaluation/varclr/data/: preprocessor.py
src/evaluation/varclr/models/: encoders.py  urls_pretrained_model.py
src/experiments/: _00_extract_datasets.py  _01_deduplicate.py  _01_extract_baseline.py  _01_extract_valid_samples.py  _01_normalize_datasets.py  _02_deduplicate.py  _02_deduplicate_exact.py  _02_exact_deduplication.py  _02_select_final_samples.py  _03_deduplicate_near.py  _03_near_deduplication.py  _03_run_all_mutations.py  _04_extract_stats.py  _04_map_gradient.py  _05_filter_datasets.py  _05_run_all_mutations.py  _06_generate_splits.py  _06_map_gradient.py  _06_select_final_samples.py  _07_map_gradient.py  _07_run_all_mutations.py  _08_map_gradient.py
src/experiments/sample_selection/: analysis.py  calculate_balance_score.py  dataset_manager.py
src/experiments/utils/: analysis.py  compare_dup_pairs.py  dataset_manager.py  env_init.py  resource_manager.py
src/transtructiver/: cli.py  config.py  exceptions.py  node.py
src/transtructiver/data_loading/: data_loader.py
src/transtructiver/mutation/: README.md  mutation_context.py  mutation_engine.py  mutation_manifest.py  mutation_rule.py  mutation_types.py
src/transtructiver/mutation/rule/: variable_renaming.py
src/transtructiver/mutation/rules/: comment_deletion.py  comment_normalization.py  mutation_rule.py  whitespace_normalization.py
src/transtructiver/mutation/rules/comment_normalization/: _context_mapping.py  _format_only.py  _replacement_generator.py  comment_normalization.py
src/transtructiver/mutation/rules/control_structure_substitution/: control_structure_substitution.py
src/transtructiver/mutation/rules/utils/: formatter.py  (+3 more)
src/transtructiver/parsing/: adapter.py  converter.py  parser.py
src/transtructiver/parsing/annotation/: README.md  annotation_utils.py  annotator.py  builtin_checker.py  cpp_annotator.py  java_annotator.py  python_annotator.py
src/transtructiver/prototype/: cli.py  node.py
src/transtructiver/prototype/mock/: mock_cst.py
src/transtructiver/prototype/mutation/: mutate.py  mutation_engine.py  mutation_manifest.py  mutation_rule.py  mutation_types.py
src/transtructiver/prototype/parsing/: adapter.py  converter.py  parse.py  parser.py
src/transtructiver/prototype/reporting/: output_manager.py  summary_logger.py
src/transtructiver/prototype/verification/: si_verifier.py
src/transtructiver/reporting/: output_manager.py
src/transtructiver/utils/: languages.py  scope_manager.py
src/transtructiver/verification/: si_verifier.py
src/transtructiver/verification/strategies/: content_strategy.py  delete_strategy.py  insert_strategy.py  registry.py  substitute_strategy.py  verification_strategy.py
tests/: test_builtin_checker.py  test_cli.py  test_config.py  test_node.py
tests/data_loading/: test_data_loader.py
tests/experiments/sample_selection/: test_analysis.py
tests/mutation/: test_mutation_context.py  test_mutation_engine.py  test_mutation_manifest.py  test_mutation_rule.py  test_mutation_types.py
tests/mutation/rule/: test_rename_identifier.py  test_variable_renaming.py
tests/mutation/rules/: test_comment_deletion.py  test_comment_normalization.py  test_mutation_rule.py  test_rename_identifier.py  test_whitespace_normalization.py
tests/mutation/rules/comment_normalization/: test_comment_normalization.py  test_format_only.py
tests/mutation/rules/control_structure_substitution/: test_control_structure_substitution.py
tests/mutation/rules/dead_code_insertion/: test_dead_code_insertion.py
tests/mutation/rules/identifier_renaming/: test_identifier_frequency_map.py  test_rename_abbreviation.py  test_rename_destruction.py  test_rename_substitution.py
tests/mutation/rules/lexicons/: test_dead_code_lexicon.py  test_lexicon_registry.py  test_python_lexicon.py
tests/mutation/rules/utils/: test_formatter.py  test_indentation_util.py
tests/parsing/: test_adapter.py  test_annotation.py  test_converter.py  test_parser.py
tests/reporting/: test_output_manager.py  test_summary_logger.py
tests/verification/: test_si_verifier.py
tests/verification/strategies/: test_content_strategy.py  test_delete_strategy.py  test_registry.py  test_substitute_strategy.py  test_verification_strategy.py
(+75 files in other folders)
