[project]
name = "transtructiver"
version = "0.1.0"
description = "This project delivers TranStructIVer: a modular and extensible software framework for automated semantics-preserving code transformation and verification."
readme = "README.md"
authors = [
    { name = "Loviza Sahlén", email = "losa2300@student.miun.se" },
    { name = "Thomas Springfeldt", email = "thsp1900@student.miun.se" }
]
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "gdown>=6.0.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "seaborn>=0.13.2",
    "torch @ https://download-r2.pytorch.org/whl/cu130/torch-2.10.0%2Bcu130-cp314-cp314-win_amd64.whl",
    "transformers>=5.5.4",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=1.4.1",
    "tree-sitter-python>=0.25.0",
    "scipy>=1.17.1",
    "accelerate>=1.13.0",
    "scikit-learn>=1.8.0",
    "torchvision @ https://download-r2.pytorch.org/whl/cu130/torchvision-0.25.0%2Bcu130-cp314-cp314-win_amd64.whl",
    "torchaudio @ https://download-r2.pytorch.org/whl/cu130/torchaudio-2.10.0%2Bcu130-cp314-cp314-win_amd64.whl",
]

[project.scripts]
transtructiver = "transtructiver:main" 
proto-mutate = "transtructiver.prototype.mutation.mutate:main"
proto-parse = "transtructiver.prototype.parsing.parse:main"
proto-verify = "transtructiver.prototype.verification.verify:main"
proto-cli = "transtructiver.prototype.cli:main"
cli = "transtructiver.cli:main"
parser = "transtructiver.parsing.parser:main"

# Experiments scripts
verify-login = "experiments.sample_selection.dataset_manager:main"
step01 = "experiments._01_extract_valid_samples:run_step_01"
step02 = "experiments._02_select_final_samples:run_step_02"
step03 = "experiments._03_run_all_mutations:main"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | migrations
)/
'''

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black==24.1.0",
    "ipykernel>=7.2.0",
    "notebook>=7.5.5",
    "pytest>=9.0.2",
]
